--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-streamlit
-python-dotenv
-google-generativeai
-python-docx
-gTTS
-SpeechRecognition
+streamlit==1.27.0
+google-generativeai==0.3.0
+python-dotenv==1.0.0
+pyperclip==1.8.2
